--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,7 +13,7 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/hehe-wang/openwrt
-  REPO_BRANCH: openwrt-19.07
+  REPO_BRANCH: master
 
 on:
   workflow_dispatch:
