--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,7 +13,7 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/hehe-wang/openwrt
-  REPO_BRANCH$TAG: openwrt-21.02.2
+  REPO_TAG: openwrt-21.02.2
 
 on:
   workflow_dispatch:
@@ -29,7 +29,7 @@ jobs:
     - name: Get Commit Hash
       id: getHash
       run: |
-        git clone --depth 1 $REPO_URL -b $REPO_BRANCH$TAG .
+        git clone --depth 1 $REPO_URL -b $REPO_TAG .
         echo "::set-output name=commitHash::$(git rev-parse HEAD)"
 
     - name: Compare Commit Hash
