--- a/mt7621_jdcloud_re-sp-01b.dts
+++ b/mt7621_jdcloud_re-sp-01b.dts
@@ -27,7 +27,7 @@
 
 		reset {
 			label = "reset";
-			gpios = <&gpio0 18 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio 18 GPIO_ACTIVE_LOW>;
 			linux,code = <KEY_RESTART>;
 		};
 	};
@@ -37,18 +37,18 @@
 
 		led_red: red {
 			label = "jdcloud:red:sys";
-			gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio 6 GPIO_ACTIVE_LOW>;
 			panic-indicator;
 		};
 
 		led_green: green {
 			label = "jdcloud:green:sys";
-			gpios = <&gpio0 8 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio 8 GPIO_ACTIVE_LOW>;
 		};
 
 		led_blue: blue {
 			label = "jdcloud:blue:sys";
-			gpios = <&gpio0 12 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio 12 GPIO_ACTIVE_LOW>;
 		};
 	};
 };
@@ -91,7 +91,7 @@
 			partition@50000 {
 				compatible = "denx,uimage";
 				label = "firmware";
-				reg = <0x50000 0x1ab0000>;
+				reg = <0x50000 0x1fb0000>;
 			};
 		};
 	};
