--- a/mt7621_jdcloud_re-sp-01b.dts
+++ b/mt7621_jdcloud_re-sp-01b.dts
@@ -15,7 +15,7 @@
 		led-failsafe = &led_red;
 		led-running = &led_green;
 		led-upgrade = &led_blue;
-		label-mac-device = &ethernet;
+		label-mac-device = &gmac0;
 	};
 
 	chosen {
@@ -109,8 +109,27 @@
 	};
 };
 
-&ethernet {
+&gmac0 {
 	mtd-mac-address-ascii = <&config 0x4429>;
+};
+
+&switch0 {
+	ports {
+		port@0 {
+			status = "okay";
+			label = "wan";
+		};
+
+		port@1 {
+			status = "okay";
+			label = "lan1";
+		};
+
+		port@2 {
+			status = "okay";
+			label = "lan2";
+		};
+	};
 };
 
 &pcie {
@@ -138,7 +157,7 @@
 
 &state_default {
 	gpio {
-		ralink,group = "uart2", "uart3", "wdt";
-		ralink,function = "gpio";
+		groups = "uart2", "uart3", "wdt";
+		function = "gpio";
 	};
 };
