--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/hehe-wang/openwrt
-  REPO_TAG: v21.02.0
+  REPO_URL: https://github.com/openwrt/openwrt
+  REPO_TAG: v19.07.9
   DTS_FILE: mt7621_jdcloud_re-sp-01b.dts
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
