--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -12,8 +12,8 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/hehe-wang/openwrt
-  REPO_TAG: openwrt-21.02.0
+  REPO_URL: https://github.com/openwrt/openwrt
+  REPO_TAG: v19.07.9
 
 on:
   workflow_dispatch:
