--- a/mt7621_jdcloud_re-sp-01b.dts
+++ b/mt7621_jdcloud_re-sp-01b.dts
@@ -15,7 +15,6 @@
 		led-failsafe = &led_red;
 		led-running = &led_green;
 		led-upgrade = &led_blue;
-		label-mac-device = &gmac0;
 	};
 
 	chosen {
@@ -76,7 +75,7 @@
 				read-only;
 			};
 
-			config: partition@30000 {
+			partition@30000 {
 				label = "config";
 				reg = <0x30000 0x10000>;
 				read-only;
@@ -109,22 +108,16 @@
 	};
 };
 
-&gmac0 {
-	mtd-mac-address-ascii = <&config 0x4429>;
-};
-
 &switch0 {
 	ports {
 		port@0 {
 			status = "okay";
 			label = "wan";
 		};
-
 		port@1 {
 			status = "okay";
 			label = "lan1";
 		};
-
 		port@2 {
 			status = "okay";
 			label = "lan2";
@@ -139,7 +132,6 @@
 &pcie0 {
 	wifi@0,0 {
 		reg = <0x0000 0 0 0 0>;
-		mtd-mac-address-ascii = <&config 0x4429>;
 		mediatek,mtd-eeprom = <&factory 0x0>;
 	};
 };
@@ -147,9 +139,6 @@
 &pcie1 {
 	wifi@0,0 {
 		reg = <0x0000 0 0 0 0>;
-		mtd-mac-address-ascii = <&config 0x4429>;
-		mtd-mac-address-increment = <0x80>;
-		mtd-mac-address-increment-byte = <3>;
 		mediatek,mtd-eeprom = <&factory 0x8000>;
 		ieee80211-freq-limit = <5000000 6000000>;
 	};
@@ -157,7 +146,7 @@
 
 &state_default {
 	gpio {
-		groups = "uart2", "uart3", "wdt";
-		function = "gpio";
+		ralink,group = "uart2", "uart3", "wdt";
+		ralink,function = "gpio";
 	};
 };
