--- a/.config
+++ b/.config
@@ -1730,7 +1730,7 @@ CONFIG_ZABBIX_NOSSL=y
 # Database Software
 #
 # CONFIG_ZABBIX_MYSQL is not set
-# CONFIG_ZABBIX_POSTGRESQL=y
+CONFIG_ZABBIX_POSTGRESQL=y
 # CONFIG_PACKAGE_zabbix-server-frontend is not set
 # end of Zabbix
 
