--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,8 +20,10 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/Lienol/openwrt
-  REPO_TAG: 22.03
+  REPO_URL: https://github.com/openwrt/openwrt
+ # REPO_URL: https://github.com/Lienol/openwrt
+  REPO_TAG: v22.03.0
+  # REPO_TAG: 22.03
   DTS_FILE: mt7621_jdcloud_re-sp-01b.dts
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
