--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -21,7 +21,7 @@ on:
 
 env:
  # REPO_URL: https://github.com/openwrt/openwrt
-  REPO_URL: https://github.com/AmadeusGhost/lede
+  REPO_URL: https://github.com/padavanonly/immortalwrt
  # REPO_TAG: v22.03.0
   # REPO_TAG: 22.03
   REPO_TAG: master
