--- a/.github/workflows/immortalwrt.yml
+++ b/.github/workflows/immortalwrt.yml
@@ -16,12 +16,7 @@ on:
       model:
         description: '选择机型'
         required: true
-        default: 'MI-R3G' 
-        type: choice
-        options:
-          - 'MI-R3G'
-          - 'MI-R3P'
-          - 'K2P'
+        default: 'jdc' 
       #cpu超频：1000Mhz--0x312 1100Mhz--0x362 1200Mhz--0x3B2
       cpu_overclock:
         type: boolean
