--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -25,7 +25,7 @@ env:
  # REPO_TAG: v22.03.0
   # REPO_TAG: 22.03
   REPO_TAG: master
-  DTS_FILE: mt7621_jdcloud.dts
+  DTS_FILE: mt7621_jdcloud_re-sp-01b.dts
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
