--- a/.github/workflows/immortalwrt.yml
+++ b/.github/workflows/immortalwrt.yml
@@ -68,7 +68,7 @@ on:
   #   types: [started]                  # 点击 star 之后
   
 env:
-  REPO_URL: https://github.com/openwrt/openwrt
+  REPO_URL: https://github.com/padavanonly/immortalwrt
   REPO_BRANCH: master
   DTS_FILE: mt7621_jdcloud_re-sp-01b.dts
   FEEDS_CONF: feeds.conf.default
